Sun Jan  7 21:16:57 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (SYNOPSIS, OPTIONS): Document -X option (thanks,
	  Sam Morris; Debian bug #360112).

Sun Jan  7 20:58:16 GMT 2007  Colin Watson  <cjwatson@debian.org>

	Add cross-references to mandb in apropos and whatis documentation
	(thanks, Phil Endecott; Debian bug #388755).

	* man/man1/apropos.man1 (DESCRIPTION): Mention that the database is
	  updated by mandb.
	  (SEE ALSO): Refer to mandb(8).
	* man/man1/whatis.man1 (DESCRIPTION, SEE ALSO): Likewise.

Sun Jan  7 20:51:27 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* src/globbing.c (parse_layout): Actually check upper-cased version
	  of layout rather than creating it and then ignoring it.

Sun Jan  7 20:48:58 GMT 2007  Colin Watson  <cjwatson@debian.org>

	Fix a slew of memory leaks, including a nasty per-search leak in
	apropos (Debian bug #368749).

	* include/manconfig.h.in (ATTRIBUTE_UNUSED): Define to an attribute
	  marking a variable as unused if using GCC 2.4 or newer.

	* lib/error.c (error): Free program_name before exiting.
	* src/accessdb.c (main): Put program_name in allocated memory.
	* src/wrapper.c (main): Likewise.
	* src/Makefile.in: Link wrapper against libman.

	* libdb/db_gdbm.c (man_gdbm_firstkey): Register cleanup function to
	  free parent_sortkey_hash on exit.
	* src/globbing.c (update_directory_cache): Register cleanup function
	  to free dirent_hash on exit.
	  (look_for_file): Register cleanup function to free gbuf on exit.
	  Move freeing of gbuf before each search to ...
	  (match_in_directory): ... here.
	* src/manp.c (free_config_file): New function.
	  (read_config_file): Register cleanup function to free
	  configuration file structures on exit.

	* lib/cleanup.c (do_cleanups): Free the stack after processing it.
	* lib/hashtable.c (hash_free): Free ht->hashtab as well.
	* libdb/db_lookup.c (free_mandata_elements): Add TODO comment about
	  strange memory handling.