@@ -1,3 +1,8 @@
+Sun Jan  7 23:54:18 GMT 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (make_roff_command): Don't try to pass -X or -P-g
+	  options to eqn, only troff (Debian bug #327772).
+
 Sun Jan  7 21:16:57 GMT 2007  Colin Watson  <cjwatson@debian.org>
 
 	* man/man1/man.man1 (SYNOPSIS, OPTIONS): Document -X option (thanks,
